# ego_ws

./: .gitignore
src/fake_sensor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/fake_sensor/fake_sensor/: fake_sensor_pub.py
src/fake_sensor/scripts/: fake_sensor_pub.py
src/patchwork/: CMakeLists.txt  package.xml
src/patchwork/config/: params_ouster128.yaml  params_ouster128_ros2.yaml
src/patchwork/include/patchwork/: patchwork.hpp  utils.hpp
src/patchwork/include/tools/: kitti_loader.hpp
src/patchwork/nodes/: offline_kitti.cpp  offline_own_data.cpp  pub_for_legoloam.cpp  ros_kitti.cpp
src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/planner/mpc_controller/: CMakeLists.txt  package.xml
src/planner/mpc_controller/include/: MPC.hpp
src/planner/mpc_controller/src/: MPC.cpp  uniform_bspline.cpp
src/planner/path_searching/: CMakeLists.txt  package.xml
src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/planner/path_searching/src/: dyn_a_star.cpp
src/planner/plan_env/: CMakeLists.txt  package.xml
src/planner/plan_env/include/plan_env/: grid_map.h
src/planner/plan_env/src/: grid_map.cpp
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  plan_container.hpp  planner_manager.h
src/planner/plan_manage/launch/: advanced_param.launch.xml  advanced_param.xml  run_in_sim.launch  run_in_sim.launch.xml
src/planner/plan_manage/src/: cmd_vel_bridge_node.cpp  ego_planner_node.cpp  ego_replan_fsm.cpp  planner_manager.cpp  safety_stop_guard_node.cpp  traj_server.cpp
src/planner/traj_utils/: CMakeLists.txt  package.xml
src/planner/traj_utils/include/traj_utils/: planning_visualization.h
src/planner/traj_utils/src/: planning_visualization.cpp
