<?xml version="1.0"?>
<package format="3">
  <name>patchwork</name>
  <version>0.0.0</version>
  <description>patchwork package</description>

  <maintainer email="shapelim@kaist.ac.kr">Hyungtae Lim</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <depend>laser_geometry</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>

  </export>
</package>
